# avrs

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROBLEM_STATEMENT.md  README.md  STATUS.md  agents.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ai/phronetic/screener/: Config.kt  ContactChecker.kt  ScreenerService.kt  ScreeningWebSocketService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  pickr_logo.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
avrs/: __init__.py  agent.py  audio_utils.py  cli.py  config.py  corpus.py  exotel.py  merger.py  metrics.py  parser.py  plivo.py  router.py  server.py  stt.py  tts.py  users.py  utils.py  voice_api.py
benchmark/: run_benchmark.py
corpus/screener/: index.json
corpus_data/: banking_phrases.txt  insurance_phrases.txt  payments_phrases.txt
docs/: AVRS_Pipeline_Technical.md  AVRS_Research_Paper.md  AVRS_Research_Update.md  END_TO_END_SETUP.md  PLIVO_SETUP.md
examples/: benchmark_nisqa.py  insurance_agent.py  payment_confirm.py  talk.py  voice_client.py
samples/: README.md
scripts/: build_corpus.sh  build_insurance_corpus.py  download_models.sh  find_best_questions.py  prebuild_corpus.sh  run_demo.sh
static/: index.html
tests/: conftest.py  test_merger.py  test_metrics.py  test_parser.py  test_router.py
(+21 files in other folders)
